# Rust

./: .gitignore
gazomove/: Cargo.toml  gazomove.rs
gazomove/src/: main.rs
ltl-reader/: Cargo.toml  build.rs
ltl-reader-gemini/: Cargo.toml  build.rs
ltl-reader-gemini/src/: main.rs
ltl-reader/src/: main.rs
md-reader/: index.html
md-reader-Pico/: index.html  package-lock.json  package.json
md-reader-Pico/src/: main.ts
md-reader-Pico/src-tauri/: Cargo.toml
md-reader-Pico/src-tauri/icons/: icon.icns
md-reader/src/: main.ts
md-reader/src-tauri/: 2  tauri.conf.json
md-reader/src-tauri/src/: main.rs
subscription_manager/: index.html  package-lock.json  package.json  vite.config.ts
subscription_manager/src/: db.ts  main.ts  styles.css  types.ts
subscription_manager/src-tauri/: Cargo.toml  tauri.conf.json
subscription_manager/src-tauri/capabilities/: default.json
subscription_manager/src-tauri/icons/: icon.icns
subscription_manager/src-tauri/src/: lib.rs  main.rs
